crates/toml/tests/snapshots/invalid/local-date/year-3digits.stderr
TOML parse error at line 1, column 10
  |
1 | foo = 199-09-09
  |          ^
expected newline, `#`
